Easy and configurable TestSuiteBuilder. Creating AllTests test case which is going to be the smoke test target.
Adding junit support in the build file and getting kawala for its first continuous build run!

git-svn-id: http://kawala.googlecode.com/svn/trunk@26 d744d98c-a4b2-11de-97f0-97815e7b2756